[package]
name = "easee_status"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4" }
reqwest = { version = "0.11", features = ["json"] }
serde_json = { version = "1.0" }
tracing = { version = "0.1" }
local_credentials = { git = "https://github.com/CasaMack/local_credentials.git", features = ["async"] }
tokio = { version = "1", features = ["full"] }
influxdb = { version = "0.5.2", features = ["derive"] }

# Bin dependencies
tracing-subscriber = { version = "0.3" }
tracing-appender = { version = "0.2" }